# BalancingBeam

./: .gitignore  CMakeLists.txt  README.md
CAD Model/: Ball.SLDPRT  Base.SLDPRT  Centre Mount.SLDPRT  Centre Mount.STL  CrystalOscillator.STEP.SLDPRT  Emitter.STEP.SLDPRT  End Cap.SLDPRT  Endcap.STL  Endcap.STL.SLDPRT  Guide Support.SLDPRT  HC-SR04.STEP.SLDASM  HC-SR04board.STEP.SLDPRT  Horn.SLDPRT  PaperGuide.SLDPRT  Rod.SLDPRT  Rod.STL  ServoStand.SLDPRT  ServoStand.STL  Stand.SLDPRT  Stand.STL  Ultrasonic mount.SLDPRT  Ultrasonic mount.STL  Wheel.SLDPRT  Wheel.STL  headerMale.STEP.SLDPRT  smdChip14pin.STEP.SLDPRT  smdChip16pin.STEP.SLDPRT  smdResistor102.STEP.SLDPRT  smdResistor103.STEP.SLDPRT  smdResistor124.STEP.SLDPRT  smdResistor335.STEP.SLDPRT  smdResistor392.STEP.SLDPRT  smdResistor412.STEP.SLDPRT  smdResistor563.STEP.SLDPRT  smdResistor622.STEP.SLDPRT  smdResistor753.STEP.SLDPRT  smdceramiccapacitor.STEP.SLDPRT  solder.STEP.SLDPRT  ~$smdChip16pin.STEP.SLDPRT
CAD Model/mg995-mg996r-servo-1.snapshot.1/: MG995-MG996R Servo.prt
arduino/main/: main.ino
arduino/tests/test_display_imu/: test_display_imu.ino
arduino/tests/test_kalman/: kalman.h  test_kalman.ino
arduino/tests/test_pid/: test_pid.ino
fw_beam/: fw_beam.ino  lcd_screen.cpp  lcd_screen.h  lp_filter.cpp  lp_filter.h  mpu6050.cpp  mpu6050.h  pid_control.cpp  pid_control.h  servo_handler.cpp  servo_handler.h  ultrasonic_handler.cpp  ultrasonic_handler.h
pen_tracker/: get_hsv.py  hsv_value.npy  main.py  requirements.txt  send_to_mcu.py  track.py
pen_tracker/tests/: send_to_mcu.py  track.py
(+3 files in other folders)
